--- a/app/views/home/convert.html.erb
+++ b/app/views/home/convert.html.erb
@@ -1,1 +1,5 @@
-Output <%=  @converted_number.join(',') %>
+<% if @invalid_input == 0 %>
+    <%=  @converted_number.join(',') %>
+<% else %>
+    INVALID INPUT
+<% end %>
